[metadata]
name = piservo
version = 1.0.0
description = Servo motor control library
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
url = http://github.com/naoto64/RPi-Servo-Control

[options]
package_dir=
    =src
packages=find:
install_requires=
        pigpio~=1.44

[options.packages.find]
where=src